# rust-genesis

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml  cliff.toml  deny.toml
specs/: README.md  SPEC.md
src/: main.rs
